--- a/docs/xrefmap.yml
+++ b/docs/xrefmap.yml
@@ -262,19 +262,19 @@ references:
   isSpec: "True"
   fullName: Scrapbook101core.Controllers.ItemApiController.PostAsync
   nameWithType: ItemApiController.PostAsync
-- uid: Scrapbook101core.Controllers.ItemApiController.Put(System.String,System.String)
-  name: Put(String, String)
-  href: api/Scrapbook101core.Controllers.ItemApiController.html#Scrapbook101core_Controllers_ItemApiController_Put_System_String_System_String_
-  commentId: M:Scrapbook101core.Controllers.ItemApiController.Put(System.String,System.String)
-  fullName: Scrapbook101core.Controllers.ItemApiController.Put(System.String, System.String)
-  nameWithType: ItemApiController.Put(String, String)
-- uid: Scrapbook101core.Controllers.ItemApiController.Put*
-  name: Put
-  href: api/Scrapbook101core.Controllers.ItemApiController.html#Scrapbook101core_Controllers_ItemApiController_Put_
-  commentId: Overload:Scrapbook101core.Controllers.ItemApiController.Put
+- uid: Scrapbook101core.Controllers.ItemApiController.PutAsync(System.String,Scrapbook101core.Models.Item)
+  name: PutAsync(String, Item)
+  href: api/Scrapbook101core.Controllers.ItemApiController.html#Scrapbook101core_Controllers_ItemApiController_PutAsync_System_String_Scrapbook101core_Models_Item_
+  commentId: M:Scrapbook101core.Controllers.ItemApiController.PutAsync(System.String,Scrapbook101core.Models.Item)
+  fullName: Scrapbook101core.Controllers.ItemApiController.PutAsync(System.String, Scrapbook101core.Models.Item)
+  nameWithType: ItemApiController.PutAsync(String, Item)
+- uid: Scrapbook101core.Controllers.ItemApiController.PutAsync*
+  name: PutAsync
+  href: api/Scrapbook101core.Controllers.ItemApiController.html#Scrapbook101core_Controllers_ItemApiController_PutAsync_
+  commentId: Overload:Scrapbook101core.Controllers.ItemApiController.PutAsync
   isSpec: "True"
-  fullName: Scrapbook101core.Controllers.ItemApiController.Put
-  nameWithType: ItemApiController.Put
+  fullName: Scrapbook101core.Controllers.ItemApiController.PutAsync
+  nameWithType: ItemApiController.PutAsync
 - uid: Scrapbook101core.Controllers.ItemController
   name: ItemController
   href: api/Scrapbook101core.Controllers.ItemController.html
