--- a/docbuild/api/Scrapbook101core.Startup.yml
+++ b/docbuild/api/Scrapbook101core.Startup.yml
@@ -7,7 +7,7 @@ items:
   children:
   - Scrapbook101core.Startup.#ctor(Microsoft.Extensions.Configuration.IConfiguration)
   - Scrapbook101core.Startup.Configuration
-  - Scrapbook101core.Startup.Configure(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment)
+  - Scrapbook101core.Startup.Configure(Microsoft.AspNetCore.Builder.IApplicationBuilder,IWebHostEnvironment)
   - Scrapbook101core.Startup.ConfigureServices(Microsoft.Extensions.DependencyInjection.IServiceCollection)
   langs:
   - csharp
@@ -19,8 +19,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Startup.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Startup
     path: ../Scrapbook101core/Startup.cs
     startLine: 18
@@ -62,8 +62,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Startup.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: .ctor
     path: ../Scrapbook101core/Startup.cs
     startLine: 20
@@ -95,8 +95,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Startup.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Configuration
     path: ../Scrapbook101core/Startup.cs
     startLine: 25
@@ -130,8 +130,8 @@ items:
   source:
     remote:
       path: Scrapbook101core/Startup.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: ConfigureServices
     path: ../Scrapbook101core/Startup.cs
     startLine: 28
@@ -149,22 +149,22 @@ items:
   - public
   modifiers.vb:
   - Public
-- uid: Scrapbook101core.Startup.Configure(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment)
-  commentId: M:Scrapbook101core.Startup.Configure(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment)
-  id: Configure(Microsoft.AspNetCore.Builder.IApplicationBuilder,Microsoft.AspNetCore.Hosting.IWebHostEnvironment)
+- uid: Scrapbook101core.Startup.Configure(Microsoft.AspNetCore.Builder.IApplicationBuilder,IWebHostEnvironment)
+  commentId: M:Scrapbook101core.Startup.Configure(Microsoft.AspNetCore.Builder.IApplicationBuilder,IWebHostEnvironment)
+  id: Configure(Microsoft.AspNetCore.Builder.IApplicationBuilder,IWebHostEnvironment)
   parent: Scrapbook101core.Startup
   langs:
   - csharp
   - vb
   name: Configure(IApplicationBuilder, IWebHostEnvironment)
   nameWithType: Startup.Configure(IApplicationBuilder, IWebHostEnvironment)
-  fullName: Scrapbook101core.Startup.Configure(Microsoft.AspNetCore.Builder.IApplicationBuilder, Microsoft.AspNetCore.Hosting.IWebHostEnvironment)
+  fullName: Scrapbook101core.Startup.Configure(Microsoft.AspNetCore.Builder.IApplicationBuilder, IWebHostEnvironment)
   type: Method
   source:
     remote:
       path: Scrapbook101core/Startup.cs
-      branch: master
-      repo: https://github.com/travelmarx/scrapbook101core
+      branch: working
+      repo: https://github.com/travelmarx/scrapbook101core.git
     id: Configure
     path: ../Scrapbook101core/Startup.cs
     startLine: 62
@@ -177,7 +177,7 @@ items:
     - id: app
       type: Microsoft.AspNetCore.Builder.IApplicationBuilder
     - id: env
-      type: Microsoft.AspNetCore.Hosting.IWebHostEnvironment
+      type: IWebHostEnvironment
     content.vb: Public Sub Configure(app As IApplicationBuilder, env As IWebHostEnvironment)
   overload: Scrapbook101core.Startup.Configure*
   modifiers.csharp:
@@ -535,22 +535,14 @@ references:
   name: IApplicationBuilder
   nameWithType: IApplicationBuilder
   fullName: Microsoft.AspNetCore.Builder.IApplicationBuilder
-- uid: Microsoft.AspNetCore.Hosting.IWebHostEnvironment
-  commentId: T:Microsoft.AspNetCore.Hosting.IWebHostEnvironment
-  parent: Microsoft.AspNetCore.Hosting
+- uid: IWebHostEnvironment
   isExternal: true
   name: IWebHostEnvironment
   nameWithType: IWebHostEnvironment
-  fullName: Microsoft.AspNetCore.Hosting.IWebHostEnvironment
+  fullName: IWebHostEnvironment
 - uid: Microsoft.AspNetCore.Builder
   commentId: N:Microsoft.AspNetCore.Builder
   isExternal: true
   name: Microsoft.AspNetCore.Builder
   nameWithType: Microsoft.AspNetCore.Builder
   fullName: Microsoft.AspNetCore.Builder
-- uid: Microsoft.AspNetCore.Hosting
-  commentId: N:Microsoft.AspNetCore.Hosting
-  isExternal: true
-  name: Microsoft.AspNetCore.Hosting
-  nameWithType: Microsoft.AspNetCore.Hosting
-  fullName: Microsoft.AspNetCore.Hosting
