--- a/Scrapbook101core/appsettings.json
+++ b/Scrapbook101core/appsettings.json
@@ -15,7 +15,7 @@
     "DatabaseId": "Scrapbook101Core",
     "ItemDocumentType": "scrapbook101Item",
     "NoAssetImage": "Assets/notfound/todo.png",
-    "testCategories": "Assets/categories-document.json",
-    "testDocuments": "Assets/test-documents.json"
+    "testCategories": "Assets/category-documents-testset1.json",
+    "testDocuments": "Assets/item-documents-testset1.json"
   }
 }
